
- Updated autopygmentize script (PR#445)

- Fixed style inheritance for non-standard token types in HTML output.

- Added support for async/await to Python 3 lexer.

- Rewrote linenos option for TerminalFormatter (it's better, but slightly
  different output than before).  (#1147)

- Javascript lexer now supports most of ES6.  (#1100)

- Cocoa builtins updated for iOS 8.1 (PR#433)


Version 2.0.3
-------------
(not released yet)

- Fix highlighting of certain IRC logs formats (#1076).


Version 2.0.2
-------------
(released Jan 20, 2015)

- Fix Python tracebacks getting duplicated in the console lexer (#1068).

- Backquote-delimited identifiers are now recognized in F# (#1062).


Version 2.0.1
-------------
(released Nov 10, 2014)

- Fix an encoding issue when using ``pygmentize`` with the ``-o`` option.


Version 2.0
-----------
(released Nov 9, 2014)

- Default lexer encoding is now "guess", i.e. UTF-8 / Locale / Latin1 is
  tried in that order.

- Major update to Swift lexer (PR#410).

- Multiple fixes to lexer guessing in conflicting cases:

  * recognize HTML5 by doctype
  * recognize XML by XML declaration
  * don't recognize C/C++ as SystemVerilog

- Simplified regexes and builtin lists.


Version 2.0rc1
--------------
(released Oct 16, 2014)

- Dropped Python 2.4 and 2.5 compatibility.  This is in favor of single-source
  compatibility between Python 2.6, 2.7 and 3.3+.

- New website and documentation based on Sphinx (finally!)

- Lexers added:

  * APL (#969)
  * Agda and Literate Agda (PR#203)
  * Alloy (PR#355)
  * AmbientTalk
  * BlitzBasic (PR#197)
  * ChaiScript (PR#24)
  * Chapel (PR#256)
  * Cirru (PR#275)
  * Clay (PR#184)
  * ColdFusion CFC (PR#283)
  * Cryptol and Literate Cryptol (PR#344)
  * Cypher (PR#257)
  * Docker config files
  * EBNF (PR#193)
  * Eiffel (PR#273)
  * GAP (PR#311)
  * Golo (PR#309)
  * Handlebars (PR#186)
  * Hy (PR#238)
  * Idris and Literate Idris (PR#210)
  * Igor Pro (PR#172)
  * Inform 6/7 (PR#281)