@@ -47,6 +47,9 @@ Version 2.1
 
 - Cocoa builtins updated for iOS 8.1 (PR#433)
 
+- Combined BashSessionLexer and ShellSessionLexer, new version should support
+  the prompt styles of either.
+
 
 Version 2.0.3
 -------------
